<resources>
    <string name="app_name">StockPhotos</string>
    <string name="image_description">Konten Gambar</string>
    <string name="dummy_name">Mitya Motov</string>
    <string name="title_information">INFORMASI FOTO</string>
    <string name="title_photograph">Fotograper</string>
    <string name="title_resolution">Resolusi</string>
    <string name="dummy_size">3000px x 4000px</string>

    <string name="resolution">%1$d px X %2$d px</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="error_message">Error Message</string>
    <string name="empty_data">Data Kosong</string>
    <string name="no_signal">Tidak Ada Koneksi Internet!</string>
</resources>