<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="100dp">

        <TextView
            android:id="@+id/tv_title_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_information"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_photograph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/title_photograph"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_information" />

        <TextView
            android:id="@+id/tv_photographer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/dummy_name"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_photograph"
            app:layout_constraintStart_toEndOf="@id/tv_title_photograph"
            app:layout_constraintTop_toTopOf="@id/tv_title_photograph" />

        <TextView
            android:id="@+id/tv_title_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/title_resolution"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_photograph" />

        <TextView
            android:id="@+id/tv_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/dummy_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_resolution"
            app:layout_constraintStart_toEndOf="@id/tv_title_photograph"
            app:layout_constraintTop_toTopOf="@id/tv_title_resolution" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>