<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@style/Theme.StockPhotos.TextColor"
        app:layout_constraintBottom_toBottomOf="@id/cg_layout_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cg_layout_item" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_layout_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/cp_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/grid"
            app:chipStrokeColor="@color/purple_500"
            app:chipStrokeWidth="1dp"
            app:chipBackgroundColor="@color/transparent"
            app:chipIcon="@drawable/ic_baseline_view_module_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cp_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/transparent"
            app:chipBackgroundColor="@color/transparent"
            app:chipIcon="@drawable/ic_baseline_view_list_24" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_photos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cg_layout_item"
        app:spanCount="2"
        tools:listitem="@layout/item_photo_grid" />

    <ProgressBar
        android:id="@+id/pb_photos"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>